# hmmer-reader-py

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  build_ext.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pythonapp.yml
ci/: test
hmmer_reader/: __init__.py  _cli.py  _click.py  _misc.py  _reader.py  _testit.py  meta_read.c  meta_read.h
hmmer_reader/data/: A0ALD9.fasta
hmmer_reader/test/: PF02545.hmm  PF02545.hmm.br.corrupted  test_cli.py  test_reader.py  test_testit.py  three-profs.hmm
